--- a/index.html
+++ b/index.html
@@ -1,42 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro component with sign up form</title>
+      <link
+         rel="icon"
+         type="image/png"
+         sizes="32x32"
+         href="./images/favicon-32x32.png"
+      />
+      <link rel="stylesheet" href="/dist/css/main.css" />
+      <script src="./app.js" defer></script>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+      <title>Frontend Mentor | Intro component with sign up form</title>
+   </head>
+   <body>
+      <div class="container">
+         <div class="hero">
+            <h2>Learn to code by watching others</h2>
+            <p>
+               See how experienced developers solve problems in real-time.
+               Watching scripted tutorials is great, but understanding how
+               developers think is invaluable.
+            </p>
+         </div>
+         <div class="action-wrap">
+            <button class="trial-btn">
+               <p><span>Try it free 7 days</span> then</p>
+               <small>$20/mo. thereafter</small>
+            </button>
 
-  Learn to code by watching others
+            <form class="form-control">
+               <input
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="First Name"
+                  required
+               />
+               <input
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Last Name"
+                  required
+               />
+               <input
+                  type="email"
+                  name=""
+                  id=""
+                  placeholder="Email Address"
+                  required
+               />
+               <input
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Password"
+                  required
+               />
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+               <button type="submit" class="submit-btn">
+                  <p>Claim your free trial</p>
+               </button>
 
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <!-- <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
-</body>
+               <p class="terms">
+                  By clicking the button, you are agreeing to our
+                  <a href="#" class="terms-link">Terms and Services</a>
+               </p>
+            </form>
+         </div>
+      </div>
+   </body>
 </html>
