--- a/index.html
+++ b/index.html
@@ -27,40 +27,52 @@
             </p>
          </div>
          <div class="action-wrap">
-            <button class="trial-btn">
+            <div class="trial-banner">
                <p><span>Try it free 7 days</span> then</p>
                <small>$20/mo. thereafter</small>
-            </button>
+            </div>
 
-            <form class="form-control">
-               <input
-                  type="text"
-                  name=""
-                  id=""
-                  placeholder="First Name"
-                  required
-               />
-               <input
-                  type="text"
-                  name=""
-                  id=""
-                  placeholder="Last Name"
-                  required
-               />
-               <input
-                  type="email"
-                  name=""
-                  id=""
-                  placeholder="Email Address"
-                  required
-               />
-               <input
-                  type="text"
-                  name=""
-                  id=""
-                  placeholder="Password"
-                  required
-               />
+            <form class="form">
+               <div class="form-control">
+                  <input
+                     type="text"
+                     name=""
+                     id=""
+                     placeholder="First Name"
+                     required
+                  />
+                  <i><img src="./images/icon-error.svg" alt="" /></i>
+               </div>
+               <div class="form-control">
+                  <input
+                     type="text"
+                     name=""
+                     id=""
+                     placeholder="Last Name"
+                     required
+                  />
+                  <i><img src="./images/icon-error.svg" alt="" /></i>
+               </div>
+               <div class="form-control">
+                  <input
+                     type="email"
+                     name=""
+                     id=""
+                     placeholder="Email Address"
+                     required
+                  />
+                  <i><img src="./images/icon-error.svg" alt="" /></i>
+               </div>
+               <div class="form-control">
+                  <input
+                     type="text"
+                     name=""
+                     id=""
+                     placeholder="Password"
+                     required
+                  />
+                  <i><img src="./images/icon-error.svg" alt="" /></i>
+               </div>
 
                <button type="submit" class="submit-btn">
                   <p>Claim your free trial</p>
