add form validation

--- a/index.html
+++ b/index.html
@@ -36,42 +36,47 @@
                <div class="form-control">
                   <input
                      type="text"
-                     name=""
-                     id=""
+                     id="first-name"
+                     class="first-name"
                      placeholder="First Name"
-                     required
                   />
                   <i><img src="./images/icon-error.svg" alt="" /></i>
+                  <!-- <small>First Name cannot be empty</small> -->
+                  <small>error message</small>
                </div>
                <div class="form-control">
                   <input
                      type="text"
-                     name=""
-                     id=""
+                     id="last-name"
+                     class="last-name"
                      placeholder="Last Name"
-                     required
                   />
                   <i><img src="./images/icon-error.svg" alt="" /></i>
+                  <!-- <small>Last Name cannot be empty</small>
+                   -->
+                  <small>error message</small>
                </div>
                <div class="form-control">
                   <input
                      type="email"
-                     name=""
-                     id=""
+                     id="email"
+                     class="email"
                      placeholder="Email Address"
-                     required
                   />
                   <i><img src="./images/icon-error.svg" alt="" /></i>
+                  <!-- <small>Looks like this is not an email</small> -->
+                  <small>error message</small>
                </div>
                <div class="form-control">
                   <input
-                     type="text"
-                     name=""
-                     id=""
+                     type="password"
+                     id="password"
+                     class="password"
                      placeholder="Password"
-                     required
                   />
                   <i><img src="./images/icon-error.svg" alt="" /></i>
+                  <!-- <small>Password cannot be empty</small> -->
+                  <small>error message</small>
                </div>
 
                <button type="submit" class="submit-btn">
