--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          sizes="32x32"
          href="./images/favicon-32x32.png"
       />
-      <link rel="stylesheet" href="/dist/css/main.css" />
+      <link rel="stylesheet" href="./dist/css/main.css" />
       <script src="./app.js" defer></script>
 
       <title>Frontend Mentor | Intro component with sign up form</title>
